Исправление функции explore